style: Fix unwrap skill badges

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -273,6 +273,7 @@ body {
 
 			.skill-icon {
 				display: flex;
+				flex-wrap: wrap;
 				gap: 8px;
 				margin-top: 0.5rem;
 			}
